# codespaces-jupyter

./: home.py  index.html  intermediate.docx  intermediate.md  presenation.html  pyproject.toml
